# kognit

./: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
backend/: .env  .env.example  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_piston.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  code_analyzer.py  code_runner.py  config.py  database.py  input_extractor.py  language_detection.py  llm_router.py  main.py  models.py  session_store.py  stt_service.py  tts_service.py  ws_gateway.py
backend/app/ai/: __init__.py  graph.py  prompts.py  router.py
backend/app/ai/nodes/: __init__.py  confusion.py  mastery.py  socratic.py  tagger.py
backend/app/api/: auth.py  files.py  mastery.py
backend/app/cache/: redis_client.py
backend/app/db/: engine.py  models.py  vectors.py
backend/app/executor/: base.py  piston_exec.py  schemas.py  subprocess_exec.py
backend/app/transcription/: cloud_stt.py  vad.py  whisper_local.py
backend/app/ws/: audio.py  gateway.py  protocol.py
backend/tests/: test_ai_graph.py  test_executor.py  test_ws.py
components/: act-clone-console.tsx  act-interview-freeze.tsx  act-intro.tsx  act-synapse.tsx  auth-form.tsx  brain-ticker.tsx  coded-city-window-bg.tsx  cyber-classroom-bg.tsx  dashboard-bg-provider.tsx  dashboard-theme-box.tsx  glass-panel.tsx  hanging-lamp.tsx  hud-widgets.tsx  mouse-parallax-provider.tsx  office-scene.tsx  outro-content.tsx  particle-mesh.tsx  site-footer.tsx  waves-shader-bg.tsx  (+2 more)
(+23 files in other folders)
