[project]
name = "kognit-backend"
version = "0.1.0"
description = "Kognit Socratic AI Coaching Backend"
requires-python = ">=3.11"
dependencies = [
    # --- Core Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.5",

    # --- Cache ---
    "redis[hiredis]>=5.1.0",

    # --- AI / LLM ---
    "litellm>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # --- Transcription ---
    "faster-whisper>=1.0.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",

    # --- Auth ---
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # --- Utilities ---
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
